--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "benchmark": "node scripts/benchmark.js",
     "db:generate": "prisma generate --schema ./cloud/prisma/schema.prisma",
     "db:push": "prisma db push --schema ./cloud/prisma/schema.prisma",
     "db:migrate": "prisma migrate dev --schema ./cloud/prisma/schema.prisma"
