--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "cloud",
   "version": "1.0.0",
-  "main": "cloud/server.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node cloud/server.js",
-    "dev": "nodemon cloud/server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -15,14 +15,15 @@
   },
   "dependencies": {
     "@prisma/client": "^5.7.0",
+    "@stablelib/base64": "^2.0.1",
+    "@stablelib/nacl": "^2.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "ioredis": "^5.3.2",
     "node-cache": "^5.1.2",
-    "prisma": "^5.7.0",
-    "tweetnacl": "^1.0.3"
+    "prisma": "^5.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
