Configs + better performance

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,25 @@ RATE_LIMIT_MAX_REQUESTS=100
 # Cache Settings (optional)
 CACHE_TTL_SECONDS=300
 CACHE_MAX_SIZE=10000
+
+# Ephemeral Entity Settings (optional)
+EPHEMERAL_VERSION_CACHE_TTL_SECONDS=3600
+EPHEMERAL_BATCH_SIZE=5000
+
+# Background Persistence Settings (optional)
+BG_PERSISTENCE_LOCK_TTL_SECONDS=10
+BG_PERSISTENCE_BATCH_SIZE=500
+BG_PERSISTENCE_INTERVAL_MS=5000
+BG_PERSISTENCE_MAX_RETRIES=3
+BG_PERSISTENCE_RETRY_DELAY_MS=1000
+
+# Persistent Entity Settings (optional)
+PERSISTENT_BATCH_SIZE=5000
+
+# Stream Settings (optional)
+STREAM_WORLD_INSTANCE_TTL_SECONDS=3
+
+# Distributed Lock Settings (optional)
+LOCK_DEFAULT_TTL_SECONDS=10
+LOCK_RETRY_DELAY_MS=100
+LOCK_MAX_RETRIES=3
