--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,12 @@ STREAM_REDIS_URL=redis://localhost:6379
 SENDER_PUBLIC_KEY=base64_encoded_public_key_here
 RECIPIENT_PRIVATE_KEY=base64_encoded_private_key_here
 
+# Backblaze B2 Configuration
+BACKBLAZE_KEY_ID=your_backblaze_key_id_here
+BACKBLAZE_KEY=your_backblaze_key_here
+BACKBLAZE_STAGING_BUCKET=your_backblaze_bucket_name_here
+BACKBLAZE_PRODUCTION_BUCKET=your_backblaze_bucket_name_here
+
 # Rate Limiting (optional)
 RATE_LIMIT_WINDOW_MS=60000
 RATE_LIMIT_MAX_REQUESTS=100
