--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,10 @@ BACKBLAZE_KEY=your_backblaze_key_here
 BACKBLAZE_STAGING_BUCKET=your_backblaze_bucket_name_here
 BACKBLAZE_PRODUCTION_BUCKET=your_backblaze_bucket_name_here
 
+# Backblaze File Sync Settings (optional)
+FILE_SYNC_INTERVAL_MS=60000
+FILE_SYNC_ENABLED=true
+
 # Rate Limiting (optional)
 RATE_LIMIT_WINDOW_MS=60000
 RATE_LIMIT_MAX_REQUESTS=100
